Add image to details page

--- a/src/frontend/destination_search/templates/list.html
+++ b/src/frontend/destination_search/templates/list.html
@@ -126,7 +126,7 @@ Results
 
                 <div class="location-list-item-image-container">
                     <a href="{% url 'location_detail' location_id=location.location_id %}">
-                        <img src=" {{location.thumbnail_url }} " alt="{{ location.city }} image" height="100px" width="100px">
+                        <img src=" {{location.thumbnail_url }} " alt="{{ location.city }} image">
                     </a>
                 </div>
                 
