--- a/src/frontend/destination_search/destinations/static/css/styles.css
+++ b/src/frontend/destination_search/destinations/static/css/styles.css
@@ -322,6 +322,8 @@
     object-fit: cover;
     min-width: 100%;
     min-height: 100%;
+    width: 100%;
+    height: 100%;
   }
 
 .location-list-item-info-container {
@@ -485,3 +487,33 @@
 .search .select2-container--default .select2-selection--single .select2-selection__arrow {
     height: 34px;
 }
+
+/* Details page -------------------------------------------------------------*/
+
+.details-page-container {
+    width: 100%;
+    background-color: lightblue;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.location-name {
+    font-size: 2em;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.location-image-container {
+    width: 100%;
+    height: 300px;
+    overflow: hidden;
+}
+
+.location-image-container img {
+    object-fit: cover;
+    min-width: 100%;
+    min-height: 100%;
+    width: 100%;
+    height: 100%;
+  }
