--- a/src/frontend/destination_search/destinations/static/css/styles.css
+++ b/src/frontend/destination_search/destinations/static/css/styles.css
@@ -517,3 +517,35 @@
     width: 100%;
     height: 100%;
   }
+
+.tabs {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 10px;
+    border-bottom: 2px solid #ccc;
+}
+
+.tablinks {
+    flex-grow: 1;
+    background-color: #eee;
+    color: black;
+    border: 1px solid #ccc;
+    border-radius: 5px 5px 0 0;
+    outline: none;
+    padding: 10px;
+    transition: 0.3s;
+    font-weight: bold;
+}
+
+
+.tabcontent {
+    display: none;
+    width: 100%;
+    background-color: lightgreen;
+}
+
+.tablinks.active {
+    background-color: #ccc;
+}
