--- a/src/frontend/destination_search/templates/base.html
+++ b/src/frontend/destination_search/templates/base.html
@@ -37,27 +37,27 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item {% if request.path == '/discover' %}active-link{% endif %}">
-                                <a class="nav-link" href="/discover">
+                                <a class="nav-link has-tooltip" href="/discover">
                                     Discover
-                                    <span class="tooltip-text">Discover new places</span>
+                                    <span class="tooltip-text nav-link-tooltip-text">Discover new places</span>
                                 </a>
                             </li>
                             <li class="nav-item {% if request.path == '/search' %}active-link{% endif %}">
-                                <a class="nav-link" href="/search">
+                                <a class="nav-link has-tooltip" href="/search">
                                     Search
-                                    <span class="tooltip-text">Search for a destination</span>
+                                    <span class="tooltip-text nav-link-tooltip-text">Search for a destination</span>
                                 </a>
                             </li>
                             <li class="nav-item {% if request.path == '/compare' %}active-link{% endif %}">
-                                <a class="nav-link" href="/compare">
+                                <a class="nav-link has-tooltip" href="/compare">
                                     Compare
-                                    <span class="tooltip-text">Compare different destinations</span>
+                                    <span class="tooltip-text nav-link-tooltip-text">Compare different destinations</span>
                                 </a>
                             </li>
                             <li class="nav-item {% if request.path == '/about' %}active-link{% endif %}">
-                                <a class="nav-link" href="/about">
+                                <a class="nav-link has-tooltip" href="/about">
                                     About
-                                    <span class="tooltip-text">Learn more about the project</span>
+                                    <span class="tooltip-text nav-link-tooltip-text">Learn more about the project</span>
                                 </a>
                             </li>
                         </ul>
