--- a/src/frontend/destination_search/destinations/static/css/styles.css
+++ b/src/frontend/destination_search/destinations/static/css/styles.css
@@ -9,6 +9,10 @@
 }
 
 /* Base ---------------------------------------------------------------------*/
+body {
+    overflow-x: hidden;
+}
+
 .page {
     background-color: lightsalmon;
     display: flex;
@@ -28,7 +32,7 @@
     height: auto;
     background-color: var(--accent1);
     box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.2);   
-    z-index: 1;
+    z-index: 10;
 }
 
 .header-content-container {
@@ -495,21 +499,23 @@
 
 .details-page-container {
     width: 100%;
-    background-color: lightblue;
+    background-color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.location-name {
-    font-size: 2em;
-    font-weight: bold;
-    margin-bottom: 10px;
+.details-page-header {
+    position: relative;
+    width: 100%;
+    height: 300px;
+    overflow: hidden;
 }
 
 .location-image-container {
+    position: relative;
     width: 100%;
-    height: 300px;
+    height: 100%;
     overflow: hidden;
 }
 
@@ -521,6 +527,80 @@
     height: 100%;
   }
 
+.diag1 {
+    position: absolute;
+    bottom: 0;
+    right: 190px;
+    width: 150px;
+    height: 100%;
+    background-color: white;
+    opacity: 0.5;
+    z-index: 3;
+    clip-path: polygon(100% 0, 100% 100%, 0 100%); /* Adjust these values to change the angle */
+}
+
+.diag2 {
+    position: absolute;
+    bottom: 0;
+    right: 160px;
+    width: 150px;
+    height: 100%;
+    background-color: white;
+    opacity: 0.9;
+    z-index: 2;
+    clip-path: polygon(100% 0, 100% 100%, 0 100%); /* Adjust these values to change the angle */
+}
+
+.rect1 {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 190px;
+    height: 100%;
+    background-color: white;
+    opacity: 0.5;
+    z-index: 3;
+
+}
+
+.rect2 {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 160px;
+    height: 100%;
+    background-color: white;
+    opacity: 0.9;
+    z-index: 3;
+
+}
+
+.title-container {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    z-index: 5;
+    padding-right: 20px;
+    padding-bottom: 10px;
+}
+
+.location-name {
+    font-size: 3em;
+    font-weight: bold;
+}
+
+.location-country {
+    font-size: 1.2em;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 7px;
+
+}
+
 .tabs {
     width: 100%;
     display: flex;
@@ -528,6 +608,7 @@
     justify-content: space-between;
     gap: 10px;
     border-bottom: 2px solid #ccc;
+    margin-top: 20px;
 }
 
 .tablinks {
