--- a/src/frontend/destination_search/templates/base.html
+++ b/src/frontend/destination_search/templates/base.html
@@ -32,7 +32,7 @@
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
                     <a class="navbar-brand" href="/">
                         <img src="https://www.svgrepo.com/show/58117/airplane-travelling-around-earth.svg" width="30" height="30" class="d-inline-block align-top" alt="">
-                        DestinationFinder
+                        <b>fynd</b>
                     </a>
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ml-auto">
