--- a/src/frontend/destination_search/templates/home.html
+++ b/src/frontend/destination_search/templates/home.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 
 {% block title %}
-DestinationFinder
+fynd
 {% endblock %}
 
 {% block main %}
 
 <div class="home-overview-container">
-    <p class="intro-text">Welcome to DestinationFinder. Choose an option below to get started.</p>
+    <p class="intro-text">Welcome to fynd. Choose an option below to get started.</p>
 
     <div class="box-container">
         <a href="/discover" class="box">
